--- a/API_TESTING/test-output/old/Default suite/methods.html
+++ b/API_TESTING/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="628586">  <td>19/07/26 19:40:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateStatus.validateCorrectStatus()[pri:0, instance:com.apitesting.ValidateStatus@4ae3c1cd]">validateCorrectStatus</td> 
-  <td>main@2027775614</td>   <td></td> </tr>
+<tr bgcolor="a16787">  <td>19/07/30 17:36:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PutTest.TestPost()[pri:0, instance:com.apitesting.PutTest@568bf312]">TestPost</td> 
+  <td>main@1344199921</td>   <td></td> </tr>
 </table>
